--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "translate": "^3.0.0",
     "translate-api": "^0.3.18",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.2"
   }
 }
